# kernel-tinker-rl

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
core/: __init__.py  actions.py  agent.py  agent_loop.py  browser.py  prompts.py  tracking.py  utils.py
core/reward_models/: __init__.py  base.py  webjudge.py
docs/: architecture.md  custom-environments.md  getting-started.md
examples/agent_auth/: README.md  __init__.py  actions.py  config.py  dataset.py  environment.py  evaluator.py  tasks.jsonl
examples/osworld/: README.md  __init__.py  actions.py  config.py  dataset.py  tasks.jsonl
scripts/: download_checkpoint.py  evaluate.py  list_openrouter_models.py  merge_lora.py  modal_sglang_serve.py  modal_vllm_serve.py  plot_metrics.py  preprocess_tasks.py  run_agent.py  split_dataset.py  test_tinker_api.py  tinker_evaluate.py  train.py
